[gd_scene load_steps=2 format=3 uid="uid://character_diary_viewer_001"]

[ext_resource type="Script" path="res://scripts/character_diary_viewer.gd" id="1"]

[node name="CharacterDiaryViewer" type="Panel"]
custom_minimum_size = Vector2(800, 600)
anchors_preset = 0
offset_right = 800.0
offset_bottom = 600.0
visible = false
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "角色日记"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "关闭"

[node name="DateSelector" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 10

[node name="PrevButton" type="Button" parent="MarginContainer/VBoxContainer/DateSelector"]
layout_mode = 2
text = "◀ 前一天"

[node name="DateLabel" type="Label" parent="MarginContainer/VBoxContainer/DateSelector"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "2025-10-21"
horizontal_alignment = 1

[node name="NextButton" type="Button" parent="MarginContainer/VBoxContainer/DateSelector"]
layout_mode = 2
text = "后一天 ▶"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 3

[node name="ContentVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
